@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Fixed a bug with `oq engine --delete-calculation`
   * Hazard curves/maps/uniform spectra can now be recomputed
   * Restored the early check on missing taxonomies
   * Raise an early error if an user forget the `rupture_mesh_spacing` parameter
